--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,10 @@
-// Minhas configurações prettier padrão
 {
-  "trailingComma": "es5",
-  "printWidth": 100,
+  "trailingComma": "none",
   "tabWidth": 2,
+  "useTabs": false,
   "semi": false,
   "jsxSingleQuote": true,
   "singleQuote": true,
-  "useTabs": false,
   "bracketSpacing": true,
   "bracketSameLine": true,
   "singleAttributePerLine": true
